// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Employee 1`] = `
<DocumentFragment>
  .emotion-3 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: white;
  color: black;
}

.emotion-0 {
  background: none;
  border: none;
  color: black;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  margin-bottom: .5rem;
}

.emotion-2 {
  font-size: .8rem;
  font-weight: lighter;
  margin: 0;
}

.emotion-8 {
  margin: 1rem 0 0 3rem;
}

.emotion-7 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: #028265;
  color: white;
}

.emotion-4 {
  background: none;
  border: none;
  color: white;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

<div>
    <div
      class="emotion-3"
      id="1560137139064"
    >
      <button
        aria-label="Add new employee under John Doe"
        class="emotion-0"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          />
        </svg>
      </button>
      <h2
        class="emotion-1"
      >
        John Doe
      </h2>
      <h3
        class="emotion-2"
      >
        Title: 
        <strong>
          CEO
        </strong>
      </h3>
    </div>
    <section
      class="emotion-8"
    >
      <div>
        <div
          class="emotion-7"
          id="1560137139065"
        >
          <button
            aria-label="Add new employee under Jane Doe"
            class="emotion-4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
          <h2
            class="emotion-1"
          >
            Jane Doe
          </h2>
          <h3
            class="emotion-2"
          >
            Title: 
            <strong>
              CTO
            </strong>
          </h3>
        </div>
        <section
          class="emotion-8"
        />
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Employee 2`] = `
<DocumentFragment>
  .emotion-3 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: white;
  color: black;
}

.emotion-0 {
  background: none;
  border: none;
  color: black;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  margin-bottom: .5rem;
}

.emotion-2 {
  font-size: .8rem;
  font-weight: lighter;
  margin: 0;
}

.emotion-8 {
  margin: 1rem 0 0 3rem;
}

.emotion-7 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: #028265;
  color: white;
}

.emotion-4 {
  background: none;
  border: none;
  color: white;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-18 {
  background-color: rgba(0,0,0,.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
}

.emotion-17 {
  position: fixed;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 80%;
  max-width: 450px;
  z-index: 110;
}

.emotion-16 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  max-width: 450px;
}

.emotion-10 {
  font-size: 2rem;
  font-weight: normal;
  margin: 0;
}

.emotion-12 {
  margin: 2rem 0;
}

.emotion-11 {
  background: none;
  border: 1px solid #eaeaea;
  border-radius: .25rem;
  box-sizing: border-box;
  display: block;
  font-size: 1rem;
  padding: .5rem;
  width: 100%;
}

.emotion-11:focus {
  outline: none;
  border-color: #444444;
}

.emotion-15 {
  background-color: black;
  border: 1px solid black;
  border-radius: .25rem;
  color: white;
  cursor: pointer;
  font-size: .8rem;
  padding: .75rem 0;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  text-align: center;
  text-transform: uppercase;
  width: 100%;
}

.emotion-15:hover {
  background-color: white;
  color: black;
}

<div>
    <div
      class="emotion-3"
      id="1560137139064"
    >
      <button
        aria-label="Add new employee under John Doe"
        class="emotion-0"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          />
        </svg>
      </button>
      <h2
        class="emotion-1"
      >
        John Doe
      </h2>
      <h3
        class="emotion-2"
      >
        Title: 
        <strong>
          CEO
        </strong>
      </h3>
    </div>
    <section
      class="emotion-8"
    >
      <div>
        <div
          class="emotion-7"
          id="1560137139065"
        >
          <button
            aria-label="Add new employee under Jane Doe"
            class="emotion-4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
          <h2
            class="emotion-1"
          >
            Jane Doe
          </h2>
          <h3
            class="emotion-2"
          >
            Title: 
            <strong>
              CTO
            </strong>
          </h3>
        </div>
        <section
          class="emotion-8"
        />
      </div>
    </section>
    <div
      class="emotion-18"
    >
      <div
        class="emotion-17"
        role="dialog"
      >
        <div
          class="emotion-16"
        >
          <form>
            <h1
              class="emotion-10"
            >
              ACME Inc.'s Employee Name
            </h1>
            <div
              class="emotion-12"
            >
              <input
                aria-label="Write the employee name"
                class="emotion-11"
                name="name"
                placeholder="John Doe"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="emotion-12"
            >
              <input
                aria-label="Write the employee title"
                class="emotion-11"
                name="title"
                placeholder="Software Engineer"
                type="text"
                value=""
              />
            </div>
            <button
              class="emotion-15"
            >
              Create employee
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Employee 3`] = `
<DocumentFragment>
  .emotion-3 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: white;
  color: black;
}

.emotion-0 {
  background: none;
  border: none;
  color: black;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  margin-bottom: .5rem;
}

.emotion-2 {
  font-size: .8rem;
  font-weight: lighter;
  margin: 0;
}

.emotion-8 {
  margin: 1rem 0 0 3rem;
}

.emotion-7 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: #028265;
  color: white;
}

.emotion-4 {
  background: none;
  border: none;
  color: white;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

<div>
    <div
      class="emotion-3"
      id="1560137139064"
    >
      <button
        aria-label="Add new employee under John Doe"
        class="emotion-0"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          />
        </svg>
      </button>
      <h2
        class="emotion-1"
      >
        John Doe
      </h2>
      <h3
        class="emotion-2"
      >
        Title: 
        <strong>
          CEO
        </strong>
      </h3>
    </div>
    <section
      class="emotion-8"
    >
      <div>
        <div
          class="emotion-7"
          id="1560137139065"
        >
          <button
            aria-label="Add new employee under Jane Doe"
            class="emotion-4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
          <h2
            class="emotion-1"
          >
            Jane Doe
          </h2>
          <h3
            class="emotion-2"
          >
            Title: 
            <strong>
              CTO
            </strong>
          </h3>
        </div>
        <section
          class="emotion-8"
        />
      </div>
    </section>
  </div>
</DocumentFragment>
`;
